5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4188/executions/1594_2425.log
== TEST (2019-03-28 13:12:23) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print(round(D,3),"Km/l")

-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:12:41) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print(round(D,3),"Km/l")

-- EXECUTION TIME:
0.179388
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:13:27) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print(round(D,3),"Km/l")

-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:16:55) 
-- CODE:
km1=float(input("Distancia pecorrida: "))
L1=float(input("combustivel gasto: "))
D=km/L
print((round(D,3),"Km/l")

-- EXECUTION TIME:
0.135612
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 5
    
                             ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:17:10) 
-- CODE:
km1=float(input("Distancia pecorrida: "))
L1=float(input("combustivel gasto: "))
D=km/L
print((round(D , 3),"Km/l")

-- EXECUTION TIME:
0.179438
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 5
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:17:34) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print((round(D , 3),"Km/l")

-- EXECUTION TIME:
0.160122
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 5
    
                               ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:17:49) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print((round(D , 3), "Km/l")

-- EXECUTION TIME:
0.129465
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 5
    
                                ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:17:53) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print((round(D , 3) , "Km/l")

-- EXECUTION TIME:
0.144116
-- ERROR:
  File "/home/codebench/codes/1594/2425/main.py", line 5
    
                                 ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:18:12) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print(round(D , 3),"Km/l")

-- EXECUTION TIME:
0.145105
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:18:23) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print(round(D , 3) , "Km/l")

-- EXECUTION TIME:
0.180362
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:18:31) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
D=km/L
print( round(D , 3) , "Km/l")

-- EXECUTION TIME:
0.148104
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:19:31) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))

print(round(km/L, 3) , "Km/l")

-- EXECUTION TIME:
0.136856
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:19:39) 
-- CODE:
km=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))

print(round(km/L, 3) , "Km/l")

-- EXECUTION TIME:
0.12966
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:19:59) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))

print(round(d/L, 3) , "Km/l")

-- EXECUTION TIME:
0.209429
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-28 13:20:10) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))

print(round(d/L, 3) , "Km/l")

-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-28 13:20:28) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))

print(round(d/L, 3) , "Km/l")

-- EXECUTION TIME:
0.189997
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 Km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 Km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 Km/l
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:10:25) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
s=d/l
print(round(d, 3),"Km/l")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    s=d/l
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:10:59) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
s=d/l
print(round(d,3),"Km/l")

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    s=d/l
NameError: name 'l' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:11:23) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
s=d/L
print(round(d,3),"Km/l")

-- OUTPUT:
28.572 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:12:18) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
s=d/L
print(round(s,3),"Km/l")

-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:12:18) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
s=d/L
print(round(s,3),"Km/l")

-- OUTPUT:
14.286 Km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 21:12:51) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
s=d/L
print(round(s,3),"km/l")

-- OUTPUT:
14.286 km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 21:13:13) 
-- CODE:
d=float(input("Distancia pecorrida: "))
L=float(input("combustivel gasto: "))
s=d/L
print(round(s,3),"km/l")

-- EXECUTION TIME:
0.229857
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286 km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119 km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802 km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
